<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PurchaseActivity">

    <Button
        android:id="@+id/pPurchaseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/p_purchase_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/pNumberOfTicketsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/p_purchase_amount_question"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pScreenHeader" />

    <TextView
        android:id="@+id/pScreenHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/p_purchase_header"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pForestGumpFace" />

    <Spinner
        android:id="@+id/pTicketSpinner"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:dropDownWidth="match_parent"
        app:layout_constraintBottom_toBottomOf="@+id/pNumberOfTicketsText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toEndOf="@+id/pNumberOfTicketsText"
        app:layout_constraintTop_toTopOf="@+id/pNumberOfTicketsText" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="315dp" />

    <Button
        android:id="@+id/pPickDateButton"
        android:layout_width="133dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/p_pick_date_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pNumberOfTicketsText" />

    <TextView
        android:id="@+id/pDateChosen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/pPickDateButton"
        app:layout_constraintStart_toEndOf="@+id/pPickDateButton"
        app:layout_constraintTop_toTopOf="@+id/pPickDateButton" />

    <CheckBox
        android:id="@+id/pExtraLegroomCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/p_extra_legroom_check_box"
        app:layout_constraintEnd_toEndOf="@+id/pPickDateButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/pPickDateButton"
        app:layout_constraintTop_toBottomOf="@+id/pPickDateButton" />

    <CheckBox
        android:id="@+id/pFullPackageCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/p_full_package_check_box"
        app:layout_constraintBottom_toBottomOf="@+id/pExtraLegroomCheckBox"
        app:layout_constraintStart_toEndOf="@+id/pExtraLegroomCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/pPickDateButton"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/pFullPackageInfoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:background="@color/cream"
        app:layout_constraintBottom_toBottomOf="@+id/pFullPackageCheckBox"
        app:layout_constraintStart_toEndOf="@+id/pFullPackageCheckBox"
        app:layout_constraintTop_toTopOf="@+id/pFullPackageCheckBox"
        app:srcCompat="@drawable/baseline_info_24" />

    <ImageView
        android:id="@+id/pForestGumpFace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/forest_gump_face" />

    <TextView
        android:id="@+id/pPurchaseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/p_purchase_text_view"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/pForestGumpFace"
        app:layout_constraintEnd_toEndOf="@+id/pForestGumpFace"
        app:layout_constraintStart_toStartOf="@+id/pForestGumpFace"
        app:layout_constraintTop_toTopOf="@+id/pForestGumpFace" />

    <ImageButton
        android:id="@+id/pRefreshButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/cream"
        app:layout_constraintBottom_toBottomOf="@+id/pPurchaseButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pPurchaseButton"
        app:layout_constraintTop_toTopOf="@+id/pPurchaseButton"
        app:srcCompat="@drawable/baseline_refresh_48" />


</androidx.constraintlayout.widget.ConstraintLayout>